feat: add competition API
