# backend/src/main/java/no/ntnu/fullstack/backend/competition/dto/PreCompetitionInfoDTO.java
@@ -1,0 +1,11 @@
+package no.ntnu.fullstack.backend.competition.dto;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+public class PreCompetitionInfoDTO {
+  private String webSocketUrl;
+  private CompetitionDTO competition;
+}
